--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,7 +7,7 @@
 
 body
 {
-    color: #333;
+    color: rgb(0, 46, 114);
     text-align: center;
     font-family: "cursier";
     font-size: 16px;
